Fix Java 9+ API usage that broke the Java 8 CI build
CI (which actually builds with a real Java 8 JDK) failed on the new
ordering test: List.of(...) doesn't exist until Java 9, but compiled
locally without error since the local JDK's compiler resolves APIs
against its own (much newer) bootclasspath by default. Switched to
Arrays.asList(...), and verified locally this time with
-Dmaven.compiler.release=8 to force javac to check against the actual
Java 8 API surface, matching what CI enforces.

Also fixes the same problem in the README: HeaderInterceptor's map
examples used Map.of(...), which needs Java 9+ and contradicts the
stated Java 8+ requirement. Replaced with a Java 8-compatible
LinkedHashMap construction.